# minecraft_omni

./: .gitignore  README.md  agent.md  qwen_chat_extract (1).json
minecraft_omni/: QUICKSTART.md  README.md  __init__.py  config.yaml  locks.sqlite  pyproject.toml  requirements.txt  run.py
minecraft_omni/:memory:/: palace.db
minecraft_omni/architect/: hierarchical_planner.py
minecraft_omni/executor/: block_state_registry.py  build_executor.py
minecraft_omni/gateway/: api_gateway.py  spatial_lock_manager.py
minecraft_omni/llm/: context_compressor.py  tool_router.py
minecraft_omni/memory/: palace_adapter.py  sync_engine.py  version_control.py
minecraft_omni/minecraft_omni.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
minecraft_omni/orchestrator/: physics_validator.py  style_learner.py  terrain_matcher.py
minecraft_omni/parser/: command_parser.py
minecraft_omni/preview/: holographic_client.py
minecraft_omni/sync/: crdt_postgres_backend.py
minecraft_omni/tests/: comprehensive_validation.py
minecraft_omni/tests/mocks/: mock_components.py
