[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minecraft_omni"
version = "3.1.0"
description = "Minecraft Omni-Builder v3.1 - Production-ready AI building assistant with local LLM support, spatial memory sync, and multiplayer safety"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Darkstorm-bot", email = "darkstorm@example.com"}
]
keywords = ["minecraft", "ai", "builder", "llm", "automation", "crdt", "multiplayer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Darkstorm-bot/minecraft_omni"
Repository = "https://github.com/Darkstorm-bot/minecraft_omni.git"
Issues = "https://github.com/Darkstorm-bot/minecraft_omni/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["minecraft_omni*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
